@@ -1,3 +1,6 @@
+HEAD
+	+ Union type: Use selected subtype on trailingText property if the
+	  major type does not have the property
 2.0.21
 	+ Security [ZSN-2-1]: Avoid XSS in process list widget
 	+ Restore configuration with force dependencies option continues
